# sdb_test

./: .gitignore  README.md  docker-compose.yml  makefile
backend/: Dockerfile  conftest.py  pyproject.toml
backend/appointment/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/appointment/migrations/: 0001_initial.py  0002_initial.py
backend/appointment/tests/: test_models.py  test_serializers.py  test_views.py
backend/config/: settings.py  urls.py
backend/department/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/department/migrations/: 0001_initial.py  0002_initial.py
backend/department/tests/: test_models.py  test_serializers.py  test_views.py
backend/employee/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/employee/migrations/: 0001_initial.py
backend/employee/tests/: test_filters.py  test_models.py  test_serializers.py
frontend/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  AppointmentItem.tsx  DayView.tsx  SideBarCalendar.tsx  constants.ts  types.ts  utils.ts
frontend/src/__test__/: AppointmentItem.test.tsx  DayView.test.tsx  SideBarCalendar.test.tsx  utils.test.ts
